--- a/YAPA/WPF/SettingsMananger/SettingsWindow.xaml
+++ b/YAPA/WPF/SettingsMananger/SettingsWindow.xaml
@@ -10,8 +10,8 @@
         MouseLeftButtonDown="Settings_OnMouseLeftButtonDown"
         FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
         mc:Ignorable="d"
-        ResizeMode="NoResize"
-        Title="Settings" Height="300" Width="700"
+        ResizeMode="CanResizeWithGrip"
+        Title="Settings" Height="300" Width="1200"
         Topmost="True">
     <Window.Resources>
         <ResourceDictionary>
