--- a/YAPA/Plugins/Dashboard/GithubDashboard.xaml
+++ b/YAPA/Plugins/Dashboard/GithubDashboard.xaml
@@ -6,20 +6,20 @@
              xmlns:gif="http://wpfanimatedgif.codeplex.com"
              xmlns:wpf="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="800">
     <Grid>
         <StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,10,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" Height="110" x:Name="LoadingPanel" Visibility="Visible">
                 <Image gif:ImageBehavior.AnimatedSource="../../Resources/loader.gif" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" />
             </StackPanel>
 
-            <StackPanel Orientation="Horizontal" Margin="0,10,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" Height="110" x:Name="DayPanel" Visibility="Collapsed">
+            <StackPanel Orientation="Horizontal" Margin="0,10,0,0" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="110" x:Name="DayPanel" Visibility="Collapsed">
                 <StackPanel Orientation="Vertical" Margin="0,15,0,0" Width="20">
                     <TextBlock Height="11"  Margin="0,-1,0,12" FontSize="10" VerticalAlignment="Top" Text="Mon" x:Name="MondayTextBlock"></TextBlock>
                     <TextBlock Height="11"  Margin="0,0,0,12" FontSize="10" VerticalAlignment="Top" Text="Wen"></TextBlock>
                     <TextBlock Height="11"  Margin="0,0,0,1" FontSize="10" VerticalAlignment="Top" Text="Fri"></TextBlock>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal"  x:Name="WeekStackPanel" Width="377">
+                <StackPanel Orientation="Horizontal"  x:Name="WeekStackPanel" Width="877">
 
                 </StackPanel>
             </StackPanel>
